--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				height: 10px;
 				background: url(./images/2.png) 0 -128px;
 				position: absolute;
-				top: -4px;
+				top: -4px;9
 			}
 			.mc-right {
 				position: relative;
@@ -226,6 +226,7 @@
 				color: grey;
 				line-height: 40px;
 			}
+			
 			.name {
 				position: absolute;
 				margin-left: 20px;
@@ -709,7 +710,6 @@
 
 		//历史评论
 		var historydata = [{
-					{
 						"name": "王耀鹏",
 						"comment": "不错",
 						"time": "2020-05-02 15:35:22",
